--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.3",
     "morgan": "~1.9.1",
-    "qiniu": "^7.3.0"
+    "qiniu": "^7.3.0",
+    "socket.io": "^2.3.0"
   }
 }
